draco_trunk/llvm_c_api/core_h.ads


   function LLVMIsAInsertValueInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:483
   pragma Import (C, LLVMIsAInsertValueInst, "LLVMIsAInsertValueInst");

   function LLVMIsAPHINode (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:484
   pragma Import (C, LLVMIsAPHINode, "LLVMIsAPHINode");

   function LLVMIsASelectInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:485
   pragma Import (C, LLVMIsASelectInst, "LLVMIsASelectInst");

   function LLVMIsAShuffleVectorInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:486
   pragma Import (C, LLVMIsAShuffleVectorInst, "LLVMIsAShuffleVectorInst");

   function LLVMIsAStoreInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:487
   pragma Import (C, LLVMIsAStoreInst, "LLVMIsAStoreInst");

   function LLVMIsATerminatorInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:488
   pragma Import (C, LLVMIsATerminatorInst, "LLVMIsATerminatorInst");

   function LLVMIsABranchInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:489
   pragma Import (C, LLVMIsABranchInst, "LLVMIsABranchInst");

   function LLVMIsAInvokeInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:490
   pragma Import (C, LLVMIsAInvokeInst, "LLVMIsAInvokeInst");

   function LLVMIsAReturnInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:491
   pragma Import (C, LLVMIsAReturnInst, "LLVMIsAReturnInst");

   function LLVMIsASwitchInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:492
   pragma Import (C, LLVMIsASwitchInst, "LLVMIsASwitchInst");

   function LLVMIsAUnreachableInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:493
   pragma Import (C, LLVMIsAUnreachableInst, "LLVMIsAUnreachableInst");

   function LLVMIsAUnwindInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:494
   pragma Import (C, LLVMIsAUnwindInst, "LLVMIsAUnwindInst");

   function LLVMIsAUnaryInstruction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:495
   pragma Import (C, LLVMIsAUnaryInstruction, "LLVMIsAUnaryInstruction");

   function LLVMIsAAllocaInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:496
   pragma Import (C, LLVMIsAAllocaInst, "LLVMIsAAllocaInst");

   function LLVMIsACastInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:497
   pragma Import (C, LLVMIsACastInst, "LLVMIsACastInst");

   function LLVMIsABitCastInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:498
   pragma Import (C, LLVMIsABitCastInst, "LLVMIsABitCastInst");

   function LLVMIsAFPExtInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:499
   pragma Import (C, LLVMIsAFPExtInst, "LLVMIsAFPExtInst");

   function LLVMIsAFPToSIInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:500
   pragma Import (C, LLVMIsAFPToSIInst, "LLVMIsAFPToSIInst");

   function LLVMIsAFPToUIInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:501
   pragma Import (C, LLVMIsAFPToUIInst, "LLVMIsAFPToUIInst");

   function LLVMIsAFPTruncInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:502
   pragma Import (C, LLVMIsAFPTruncInst, "LLVMIsAFPTruncInst");

   function LLVMIsAIntToPtrInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:503
   pragma Import (C, LLVMIsAIntToPtrInst, "LLVMIsAIntToPtrInst");

   function LLVMIsAPtrToIntInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:504
   pragma Import (C, LLVMIsAPtrToIntInst, "LLVMIsAPtrToIntInst");

   function LLVMIsASExtInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:505
   pragma Import (C, LLVMIsASExtInst, "LLVMIsASExtInst");

   function LLVMIsASIToFPInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:506
   pragma Import (C, LLVMIsASIToFPInst, "LLVMIsASIToFPInst");

   function LLVMIsATruncInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:507
   pragma Import (C, LLVMIsATruncInst, "LLVMIsATruncInst");

   function LLVMIsAUIToFPInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:508
   pragma Import (C, LLVMIsAUIToFPInst, "LLVMIsAUIToFPInst");

   function LLVMIsAZExtInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:509
   pragma Import (C, LLVMIsAZExtInst, "LLVMIsAZExtInst");

   function LLVMIsAExtractValueInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:510
   pragma Import (C, LLVMIsAExtractValueInst, "LLVMIsAExtractValueInst");

   function LLVMIsALoadInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:511
   pragma Import (C, LLVMIsALoadInst, "LLVMIsALoadInst");

   function LLVMIsAVAArgInst (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:512
   pragma Import (C, LLVMIsAVAArgInst, "LLVMIsAVAArgInst");

  -- Operations on Uses
   function LLVMGetFirstUse (arg1 : LLVMValueRef) return LLVMUseRef;  -- Core.h:515
   pragma Import (C, LLVMGetFirstUse, "LLVMGetFirstUse");

   function LLVMGetNextUse (arg1 : LLVMUseRef) return LLVMUseRef;  -- Core.h:516
   pragma Import (C, LLVMGetNextUse, "LLVMGetNextUse");

   function LLVMGetUser (arg1 : LLVMUseRef) return LLVMValueRef;  -- Core.h:517
   pragma Import (C, LLVMGetUser, "LLVMGetUser");

   function LLVMGetUsedValue (arg1 : LLVMUseRef) return LLVMValueRef;  -- Core.h:518
   pragma Import (C, LLVMGetUsedValue, "LLVMGetUsedValue");

  -- Operations on Users
   function LLVMGetOperand (arg1 : LLVMValueRef; arg2 : unsigned) return LLVMValueRef;  -- Core.h:521
   pragma Import (C, LLVMGetOperand, "LLVMGetOperand");

  -- Operations on constants of any type
  -- all zeroes
   function LLVMConstNull (arg1 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:524
   pragma Import (C, LLVMConstNull, "LLVMConstNull");

  -- only for int/vector
   function LLVMConstAllOnes (arg1 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:525
   pragma Import (C, LLVMConstAllOnes, "LLVMConstAllOnes");

   function LLVMGetUndef (arg1 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:526
   pragma Import (C, LLVMGetUndef, "LLVMGetUndef");

   function LLVMIsConstant (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:527
   pragma Import (C, LLVMIsConstant, "LLVMIsConstant");

   function LLVMIsNull (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:528
   pragma Import (C, LLVMIsNull, "LLVMIsNull");

   function LLVMIsUndef (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:529
   pragma Import (C, LLVMIsUndef, "LLVMIsUndef");

   function LLVMConstPointerNull (arg1 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:530
   pragma Import (C, LLVMConstPointerNull, "LLVMConstPointerNull");

  -- Operations on metadata
   function LLVMMDStringInContext
     (arg1 : LLVMContextRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:533
   pragma Import (C, LLVMMDStringInContext, "LLVMMDStringInContext");

   function LLVMMDString (arg1 : Interfaces.C.Strings.chars_ptr; arg2 : unsigned) return LLVMValueRef;  -- Core.h:535
   pragma Import (C, LLVMMDString, "LLVMMDString");

   function LLVMMDNodeInContext
     (arg1 : LLVMContextRef;
      arg2 : System.Address;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:536
   pragma Import (C, LLVMMDNodeInContext, "LLVMMDNodeInContext");

   function LLVMMDNode (arg1 : System.Address; arg2 : unsigned) return LLVMValueRef;  -- Core.h:538
   pragma Import (C, LLVMMDNode, "LLVMMDNode");

  -- Operations on scalar constants
   function LLVMConstInt
     (arg1 : LLVMTypeRef;
      arg2 : Extensions.unsigned_long_long;
      arg3 : LLVMBool) return LLVMValueRef;  -- Core.h:541
   pragma Import (C, LLVMConstInt, "LLVMConstInt");

   function LLVMConstIntOfString
     (arg1 : LLVMTypeRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : uint8_t) return LLVMValueRef;  -- Core.h:543
   pragma Import (C, LLVMConstIntOfString, "LLVMConstIntOfString");

   function LLVMConstIntOfStringAndSize
     (arg1 : LLVMTypeRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : unsigned;
      arg4 : uint8_t) return LLVMValueRef;  -- Core.h:545
   pragma Import (C, LLVMConstIntOfStringAndSize, "LLVMConstIntOfStringAndSize");

   function LLVMConstReal (arg1 : LLVMTypeRef; arg2 : double) return LLVMValueRef;  -- Core.h:547
   pragma Import (C, LLVMConstReal, "LLVMConstReal");

   function LLVMConstRealOfString (arg1 : LLVMTypeRef; arg2 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:548
   pragma Import (C, LLVMConstRealOfString, "LLVMConstRealOfString");

   function LLVMConstRealOfStringAndSize
     (arg1 : LLVMTypeRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:549
   pragma Import (C, LLVMConstRealOfStringAndSize, "LLVMConstRealOfStringAndSize");

   function LLVMConstIntGetZExtValue (arg1 : LLVMValueRef) return Extensions.unsigned_long_long;  -- Core.h:551
   pragma Import (C, LLVMConstIntGetZExtValue, "LLVMConstIntGetZExtValue");

   function LLVMConstIntGetSExtValue (arg1 : LLVMValueRef) return Long_Long_Integer;  -- Core.h:552
   pragma Import (C, LLVMConstIntGetSExtValue, "LLVMConstIntGetSExtValue");

  -- Operations on composite constants
   function LLVMConstStringInContext
     (arg1 : LLVMContextRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : unsigned;
      arg4 : LLVMBool) return LLVMValueRef;  -- Core.h:556
   pragma Import (C, LLVMConstStringInContext, "LLVMConstStringInContext");

   function LLVMConstStructInContext
     (arg1 : LLVMContextRef;
      arg2 : System.Address;
      arg3 : unsigned;
      arg4 : LLVMBool) return LLVMValueRef;  -- Core.h:558
   pragma Import (C, LLVMConstStructInContext, "LLVMConstStructInContext");

   function LLVMConstString
     (arg1 : Interfaces.C.Strings.chars_ptr;
      arg2 : unsigned;
      arg3 : LLVMBool) return LLVMValueRef;  -- Core.h:562
   pragma Import (C, LLVMConstString, "LLVMConstString");

   function LLVMConstArray
     (arg1 : LLVMTypeRef;
      arg2 : System.Address;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:564
   pragma Import (C, LLVMConstArray, "LLVMConstArray");

   function LLVMConstStruct
     (arg1 : System.Address;
      arg2 : unsigned;
      arg3 : LLVMBool) return LLVMValueRef;  -- Core.h:566
   pragma Import (C, LLVMConstStruct, "LLVMConstStruct");

   function LLVMConstVector (arg1 : System.Address; arg2 : unsigned) return LLVMValueRef;  -- Core.h:568
   pragma Import (C, LLVMConstVector, "LLVMConstVector");

   function LLVMConstUnion (arg1 : LLVMTypeRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:569
   pragma Import (C, LLVMConstUnion, "LLVMConstUnion");

  -- Constant expressions
   function LLVMGetConstOpcode (arg1 : LLVMValueRef) return LLVMOpcode;  -- Core.h:572
   pragma Import (C, LLVMGetConstOpcode, "LLVMGetConstOpcode");

   function LLVMAlignOf (arg1 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:573
   pragma Import (C, LLVMAlignOf, "LLVMAlignOf");

   function LLVMSizeOf (arg1 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:574
   pragma Import (C, LLVMSizeOf, "LLVMSizeOf");

   function LLVMConstNeg (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:575
   pragma Import (C, LLVMConstNeg, "LLVMConstNeg");

   function LLVMConstNSWNeg (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:576
   pragma Import (C, LLVMConstNSWNeg, "LLVMConstNSWNeg");

   function LLVMConstNUWNeg (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:577
   pragma Import (C, LLVMConstNUWNeg, "LLVMConstNUWNeg");

   function LLVMConstFNeg (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:578
   pragma Import (C, LLVMConstFNeg, "LLVMConstFNeg");

   function LLVMConstNot (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:579
   pragma Import (C, LLVMConstNot, "LLVMConstNot");

   function LLVMConstAdd (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:580
   pragma Import (C, LLVMConstAdd, "LLVMConstAdd");

   function LLVMConstNSWAdd (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:581
   pragma Import (C, LLVMConstNSWAdd, "LLVMConstNSWAdd");
